components/productdetail/ShippingBenefit.module.scss
@import 'styles/mixins/index';

.wrap {
  margin-top: 20px;
  font-size: 13px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.29;
  letter-spacing: normal;
  text-align: left;
  color: #444444;
  margin-bottom: 25px;

  & .itemWrap {
    padding: 0 20px;
    height: 50px;
    border-bottom: solid 1px #eeeeee;
    display: flex;
    align-items: center;

    & .itemTitle {
      color: #111111;
      margin-right: 30px;
    }

    & .contentsWrap {
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: calc(100% - 48px - 30px);
    }

    & .itemContents {
      display: flex;
      font-size: 13px;
      font-weight: 500;
    }

    & .averageReviewsRating {
      margin-left: 4px;
    }

    & .plusIcon {
      width: 16px;
      height: 16px;
      background-size: 16px;
      background-repeat: no-repeat;
    }

    & .arrowR {
      width: 19px;
      height: 19px;
      background-size: 19px;
      background-image: url('/static/icon/arrow_r_line.png');
      background-repeat: no-repeat;
      margin-left: 4px;
      cursor: pointer;
    }
  }

  .benefitDetailWrap {
    position: relative;
    background: #eeeeee;

    .benefitDetailSection {
      display: flex;
      justify-content: space-between;
      align-items: center;
      border-bottom: 1px solid #fff;
      height: 50px;
      padding: 0 20px;

      &:first-child {
        margin-top: 0;
      }

      .benefitDetaieTitle {
        color: #777;
        font-size: 12px;
      }

      .benefitDetailContent {
        font-size: 12px;
        color: #444;
      }
    }
  }

  & .sellerWrap {
    height: 96px;
    border-bottom: solid 1px #eeeeee;
    width: 100%;
    padding: 18px 20px;

    & .profile {
      height: 60px;
      width: 60px;
      border-radius: 60px;
      background: url('/static/icon/profile_non_square.png') no-repeat center;
      background-size: 60px;
      margin-right: 12px;
      float: left;
    }

    & .infoTop {
      width: 80px;
      margin-right: 13px;
      float: left;

      & .sellerName {
        width: 80px;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        font-size: 12px;
        font-weight: normal;
        line-height: 1.6;
        text-align: left;
        color: #333333;
      }

      & .levelWrap {
        width: 21px;
        height: 13px;
        border-radius: 6.5px;
        border: solid 1px #dddddd;
        background-color: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        float: left;
        margin-right: 5px;

        & div {
          font-size: 10px;
          font-weight: bold;
          line-height: 1.2;
          color: #111111;
          transform: scale(0.7);
        }
      }

      & .sellerGrade {
        font-size: 11px;
        font-weight: normal;
        font-style: normal;
        font-stretch: normal;
        line-height: 1.09;
        letter-spacing: normal;
        text-align: left;
        color: #777777;
      }
    }

    & .infoWrap {
      display: flex;
      margin-bottom: 14px;

      & button {
        width: 75px;
        height: 30px;
        border: solid 1px #5d2ed1;
        background-color: #5d2ed1;
        font-size: 13px;
        font-weight: 500;
        line-height: 1.2;
        text-align: center;
        color: #ffffff;
        margin-right: 10px;

        @include break350 {
          width: 56px;
          white-space: nowrap;
          font-size: 11px;
        }

        &.colored {
          border: solid 1px #444444;
          background-color: #444444;
        }
      }
    }

    & .satisfaction {
      display: flex;
      justify-content: space-between;
      font-size: 12px;
      font-weight: normal;
      text-align: left;
      color: #333333;

      @include break350 {
        font-size: 10px;
      }

      & .good {
        height: 20px;
        background-image: url('/static/icon/grade_good.png');
        background-repeat: no-repeat;
        background-size: 20px;
        padding-left: 22px;
        line-height: 20px;
      }

      & .usual {
        height: 20px;
        background-image: url('/static/icon/grade_usual.png');
        background-repeat: no-repeat;
        background-size: 20px;
        padding-left: 22px;
        line-height: 20px;
      }

      & .bad {
        height: 20px;
        background-image: url('/static/icon/grade_bad.png');
        background-repeat: no-repeat;
        background-size: 20px;
        padding-left: 22px;
        line-height: 20px;
      }
    }
  }
}

